# AMATERASU

./: .SourceSageignore  .gitignore  README.md
.aira/: config.dev.yml
.github/release_notes/: .sourcesage_releasenotes_iris.yml
docs/: .sourcesage_releasenotes.yml  README.en.md  flow.dio
scripts/: connectivity_health_check.py  docker-compose_setup_script.sh
spellbook/: README.md  whitelist-waf.exmaple.csv
spellbook/amaterasu-tool-ui/: .SourceSageignore  README.md  pyproject.toml
spellbook/amaterasu-tool-ui/amaterasu_tool/: __init__.py  cli.py
spellbook/amaterasu-tool-ui/amaterasu_tool/config/: __init__.py  project_config.py  terraform.py  terraform_config.py
spellbook/amaterasu-tool-ui/amaterasu_tool/tests/: __init__.py  conftest.py  test_amaterasu.py  test_config.py  test_utils.py
spellbook/amaterasu-tool-ui/amaterasu_tool/utils/: __init__.py  file_operations.py  project.py  project_discovery.py
spellbook/amaterasu-tool-ui/amaterasu_tool_ui/: README.md  app.py  requirements.txt
spellbook/amaterasu-tool-ui/amaterasu_tool_ui/components/: __init__.py  progress.py  project_list.py  settings_form.py
spellbook/amaterasu-tool-ui/amaterasu_tool_ui/routes/: __init__.py  cache.py  cloudfront.py  generate.py
spellbook/amaterasu-tool-ui/amaterasu_tool_ui/utils/: file_operations.py
spellbook/amaterasu-tool-ui/assets/: styles.css
spellbook/amaterasu-tool-ui/config/: project_values.py  terraform_values.py
spellbook/amaterasu-tool-ui/docs/: development.md  installation.md  usage.md
spellbook/amaterasu-tool-ui/utils/: project_discovery.py
(+399 files in other folders)
